# CadC26

./: .gitignore  .venv  AGENT.md  AGENT_step2.md  AGENT_step3.md  AGENT_step4.md  GUIDE.md  HELP.md  MEMORY.md  README.md  contest_optimizer.py  external  pyproject.toml
.claude/: settings.json
configs/: bc_small.yaml
docs/: 05_semantic_rollout.md  06_repair_finalizer.md  07_strict_evaluation.md  08_known_failure_modes.md  METHOD.md  cadc26_research_handoff.md  objective_reranking_return_plan.md  oracle_step7_rl_gnn_system_plan_prompt.md  oracle_step7l_post_completion_next_plan_prompt.md  oracle_step7m_post_completion_next_plan_prompt.md  oracle_step7o_stagnation_diagnosis_prompt.md  oracle_step7q_rl_gnn_next_plan_prompt.md  oracle_step7r_close_prompt.md  research-experiment-manual.md  step4_final_synthesis_note.md  step4_integration_note.md  step6_legacy_inventory.md  step6c_architecture_references.md  step6e_research_guardrails.md  step6e_research_synthesis.md  step6f_verification_report.md  step6i_boundary_frame_commitment.md  step6j_boundary_hull_ownership.md  step6k_boundary_failure_attribution.md  step6l_selective_hull_stabilization.md  step6m_representative_move_library_eval.md  step6n_metric_pathology_trace.md  step6o_guarded_selector_replay.md  step6p_pareto_alternative_selector.md  step7a_aspect_pathology.md  step7b_shape_policy_study.md  step7c_local_iter0_bounded_local_lane_iteration.md  step7c_real_a_official_aligned_one_step_edits.md  step7c_real_b_metric_directed_edit_targeting.md  step7c_real_c_critical_net_slack_fit_window_repack.md  (+27 more)
(+360 files in other folders)
